Fix bulding Money module

--- a/Purse/Purse.csproj
+++ b/Purse/Purse.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Money\Money.csproj">
+      <Project>{257a7dd3-9485-4909-9e15-0a7e9b64e911}</Project>
+      <Name>Money</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
